🤘 reading first job_seeker filters

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5ec5655-e780-44d8-9069-d796a668adf3",
+   "id": "d76e9687-c095-4caf-b1e2-c42cdd45cc07",
    "metadata": {},
    "source": [
     "#%% [markdown]\n",
@@ -13,14 +13,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13ec576-53af-4fe7-ac27-437ff71af67c",
+   "id": "0a8b5b8e-8d29-416a-a736-716ec6e60c42",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_33083/247055711.py:4: DeprecationWarning: \n",
+      "<ipython-input-1-f7c085b59736>:4: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -38,12 +38,22 @@
     "import pandas as pd\n",
     "#Graph\n",
     "import seaborn  as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "# root path\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the project root directory to sys.path\n",
+    "project_root = os.path.abspath(os.path.join(os.path.dirname(__file__), \"..\"))\n",
+    "sys.path.append(project_root)\n",
+    "\n",
+    "# Now you can import from src\n",
+    "from src.app.utils import open_json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60611c88-8d96-4587-a117-ecb3965bd0bf",
+   "id": "428f32e7-8b55-4657-9be7-de002ccfb4c3",
    "metadata": {},
    "source": [
     "#%% [markdown]\n",
@@ -54,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66c7b35d-13c8-4841-a07b-5fd84362e79e",
+   "id": "85cf8311-724c-4a0e-badf-d506d379e078",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d01e737c-540d-41c6-8543-e07a9860e64c",
+   "id": "67ddb86a-f177-4bfa-a26d-be072090a1e6",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb36442-58c0-47d4-8805-6bca295c317b",
+   "id": "45a68f42-ba74-4397-9694-04555e1e3d47",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7563410e-d55d-4a4d-9c00-7960d29f899e",
+   "id": "d0004939-ba92-462b-8d69-b9db4fe6e531",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed83851-5dad-4dc6-a543-2a9a84f916fd",
+   "id": "e3dfbe19-ede7-45cf-8fe3-647b9ea99208",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1383c0d1-c43b-4a71-bdd5-ed22e668ddfe",
+   "id": "0ee8abc3-a52e-4bfc-a466-cfbaa3e0d62b",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaff740e-232a-4f04-b0ec-ba9328ff27d8",
+   "id": "cbd91144-84c6-469a-bab1-78491ffda770",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f2a593-72f5-470b-9c0e-a482e1e02dbd",
+   "id": "a99cfd1d-fa36-48e0-9115-dda79d8457b8",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c78d50-6676-4c32-8b2a-a04edc040b93",
+   "id": "b648e442-185d-4597-a646-06ac1be3c5e3",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34ff1f9-eb59-41f9-9abc-ca605123a0cd",
+   "id": "ffb14f5c-f458-4e26-a0ea-a3722cd45e4a",
    "metadata": {},
    "source": [
     "#%%[markdown]\n",
@@ -1400,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a81cf7e0-df52-4fd5-b520-81c3264b84fb",
+   "id": "17641e66-0cea-4edf-a869-3fcc09b0ad48",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a32b26df-7971-4c1b-9a6c-2eca92a53e1f",
+   "id": "c74ab5e1-f852-47f7-8f62-378157863dc3",
    "metadata": {},
    "source": [
     "#%%[markdown]\n",
@@ -1446,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cc37fa-6494-499b-b79b-844f3a1ac357",
+   "id": "0f74cb13-ec6b-44dc-8824-9ab9b03d3bd9",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05b869b4-4aca-42fd-804b-62d5d23b7f42",
+   "id": "be254924-8291-4630-bbac-4fc8810ec307",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "360194fe-764f-43c2-9a9f-f66b8989f9f2",
+   "id": "a801001e-895e-4368-8134-576f892c99fa",
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb88292-bb58-4657-aefc-e8e27a9b148c",
+   "id": "a2226033-dda2-4257-9380-94de9876fbea",
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a92b94e0-ebee-40b0-a691-d3f5283ff64f",
+   "id": "0466304f-7b55-4786-be6b-eb4f30b9da2a",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82c988c-2565-4617-8844-914fdba73db7",
+   "id": "678f3efa-ba2f-4c73-9a22-14fc8f438134",
    "metadata": {},
    "source": [
     "#%%[markdown]\n",
@@ -1649,22 +1659,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec93cd89-a106-45f3-914d-af1a5d83bbe0",
+   "id": "a4096e85-e1c8-462a-88d2-edcc4d32087a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reading file at: ../data/job_seekers.json\n"
+     ]
+    }
+   ],
    "source": [
-    "# %%\n",
+    "#%%\n",
     "\n",
-    "seniority_criteria = [\"Mid-Senior level\", \"Associate\"]\n",
-    "location_criteria = [\"Bogota, D.C., Capital District, Colombia\", \"Colombia\", \"Bogotá, Capital District, Colombia\"]\n",
-    "work_modality_criteria = [\"Full-time\"]\n",
+    "job_seeker = open_json('../data/job_seekers.json')\n",
+    "job_seeker[0].keys()\n",
+    "seniority_criteria = job_seeker[0]['seniority']\n",
+    "location_criteria = job_seeker[0]['location']\n",
+    "work_modality_criteria = job_seeker[0]['work_modality_english']\n",
     "excluded_companies = [\"BairesDev\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca95bd2-8598-4c87-ae9a-da990616bf5f",
+   "id": "d928fc85-9aad-4823-9627-dac69bbd7eca",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f22dbd9e-bf81-4181-a2dd-a16a80e19812",
+   "id": "8eefac9f-1322-44ee-a8ad-af536b96e6c0",
    "metadata": {},
    "source": [
     "#%%[markdown]\n",
@@ -1703,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a725c0e6-f95d-46fe-8d34-a8711355fb49",
+   "id": "5b169642-7a9c-4e4b-af76-da72e4493e03",
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edf60d5f-960b-4536-aba7-26efa82dfdcf",
+   "id": "1194ec62-73a4-4147-abb6-b59ac962359c",
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193e39e7-0d93-4767-9b80-5c00367e7d1d",
+   "id": "bfb5154b-05ca-42c7-a71f-fb9e48184f66",
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a6935d-fbc3-489d-98ff-e15e4d976cf9",
+   "id": "35112482-256e-4ca1-b870-81738c0a96ab",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aeb8b4b-abef-4ad5-9391-2d422efc3949",
+   "id": "1229b33f-8cce-40f4-90d6-bb78cfdbd883",
    "metadata": {},
    "outputs": [
     {
