--- a/output/a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6.md
+++ b/output/a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6.md
@@ -1,3 +1,3 @@
-# 🚀 Current Job Offers Recommendations!
-| **Job offer** | **publication_date** | **Score** |
+# 🚀 Latest Job Offers Recommendations!
+| 🗃️ **Job offer** | 🌡️**Score** | 🗓️ **publication_date** |
 |---|---|---|
